--- a/public/html/logout.html
+++ b/public/html/logout.html
@@ -28,7 +28,9 @@
             <h4>Saino Recruiter</h4>
         </div>
 
-    </nav>
+        <div>
+            <button class="logout-btn" onclick="window.location.href = 'logout.html'">Logout</button>
+        </div>
 
    
     <main class="main-content">
