--- a/public/html/subscription.html
+++ b/public/html/subscription.html
@@ -18,7 +18,9 @@
             <h4>Saino Recruiter</h4>
         </div>
 
-    </nav>
+        <div>
+            <button class="logout-btn" onclick="window.location.href = 'logout.html'">Logout</button>
+        </div>
 
     <!-- Footer Navigation -->
   
