--- a/public/html/viewPlan.html
+++ b/public/html/viewPlan.html
@@ -18,7 +18,9 @@
             <h4>Saino Recruiter</h4>
         </div>
 
-    </nav>
+        <div>
+            <button class="logout-btn" onclick="window.location.href = 'logout.html'">Logout</button>
+        </div>
 
     <!-- Footer Navigation -->
   
@@ -26,10 +28,10 @@
 
     <!-- Delivery and Date Options (Positioned differently for mobile and desktop) -->
     <div class="delivery-options">
-        <button class="delivery-btn" onclick="window.location.href = 'search.html'">Search</button>
-        <button class="delivery-btn" onclick="window.location.href = 'scan.html'">Scan</button>
+        <button class="delivery-btn" onclick="window.location.href = 'search.html'">View request</button>
+        <button class="delivery-btn" onclick="window.location.href = 'scan.html'">Find User</button>
         <button class="delivery-btn" onclick="window.location.href = 'viewPlan.html'">View Plan</button>
-        <button class="delivery-btn" onclick="window.location.href = 'logout.html'">Logout</button>
+        
     </div>
 
     <!-- Main Content Section -->
