--- a/public/html/findUser.html
+++ b/public/html/findUser.html
@@ -57,7 +57,7 @@
 
         <div class="findUser-buttons">
             <button class="yes-btn" onclick="window.location.href = ''">Search</button>
-            <button class="no-btn" onclick="window.location.href = 'scan.html'">Search by QR</button>
+            <button class="no-btn" onclick="window.location.href = 'findUser.html'">Search by QR</button>
         </div>
 
 
