--- a/public/html/subscription.html
+++ b/public/html/subscription.html
@@ -29,7 +29,7 @@
     <!-- Delivery and Date Options (Positioned differently for mobile and desktop) -->
     <div class="delivery-options">
         <button class="delivery-btn" onclick="window.location.href = 'search.html'">Search</button>
-        <button class="delivery-btn" onclick="window.location.href = 'scan.html'">Scan</button>
+        <button class="delivery-btn" onclick="window.location.href = 'findUser.html'">Scan</button>
         <button class="delivery-btn" onclick="window.location.href = 'logout.html'">Logout</button>
     </div>
 
