--- a/public/html/paymentComfirm.html
+++ b/public/html/paymentComfirm.html
@@ -40,7 +40,7 @@
     <!-- Delivery and Date Options (Positioned differently for mobile and desktop) -->
     <div class="delivery-options">
         <button class="delivery-btn" onclick="window.location.href = 'search.html'">View request</button>
-        <button class="delivery-btn" onclick="window.location.href = 'scan.html'">Find User</button>
+        <button class="delivery-btn" onclick="window.location.href = 'findUser.html'">Find User</button>
         <button class="delivery-btn" onclick="window.location.href = 'viewPlan.html'">View Plan</button>
         
     </div>
