--- a/public/html/scan.html
+++ b/public/html/scan.html
@@ -26,7 +26,7 @@
     <!-- Delivery and Date Options -->
     <div class="delivery-options">
         <button class="delivery-btn" onclick="window.location.href = 'search.html'">View request</button>
-        <button class="delivery-btn" onclick="window.location.href = 'scan.html'">Find User</button>
+        <button class="delivery-btn" onclick="window.location.href = 'findUser.html'">Find User</button>
         <button class="delivery-btn" onclick="window.location.href = 'viewPlan.html'">View Plan</button>
         
     </div>
