--- a/public/html/logout.html
+++ b/public/html/logout.html
@@ -27,11 +27,7 @@
         <div class="logo">
             <h4>Saino Recruiter</h4>
         </div>
-
-        <div>
-            <button class="logout-btn" onclick="window.location.href = 'logout.html'">Logout</button>
-        </div>
-
+    </nav>
    
     <main class="main-content">
     
